{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 47,
  "lineage": "01b48b1e-0bec-b0ef-923a-7546d369b01e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:internet-gateway/igw-03276995950ef00b5",
            "id": "igw-03276995950ef00b5",
            "owner_id": "324037306164",
            "tags": {
              "Name": "gate123"
            },
            "tags_all": {
              "Name": "gate123"
            },
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:route-table/rtb-0993b0b3dc6730c6c",
            "id": "rtb-0993b0b3dc6730c6c",
            "owner_id": "324037306164",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:route-table/rtb-0b9548537c90bd966",
            "id": "rtb-0b9548537c90bd966",
            "owner_id": "324037306164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03276995950ef00b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gate1",
            "aws_subnet.subnets",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072c308e083bf9560",
            "route_table_id": "rtb-0993b0b3dc6730c6c",
            "subnet_id": "subnet-074354c9da9fe9625"
          },
          "dependencies": [
            "aws_route_table.privateroute",
            "aws_subnet.subnets",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03be9ec67e455a4a2",
            "route_table_id": "rtb-0993b0b3dc6730c6c",
            "subnet_id": "subnet-09ce4a7575feffa9f"
          },
          "dependencies": [
            "aws_route_table.privateroute",
            "aws_subnet.subnets",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca8a448e524c0052",
            "route_table_id": "rtb-0993b0b3dc6730c6c",
            "subnet_id": "subnet-040204ac9ebc6a40a"
          },
          "dependencies": [
            "aws_route_table.privateroute",
            "aws_subnet.subnets",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07889004bf7eb9a19",
            "route_table_id": "rtb-0993b0b3dc6730c6c",
            "subnet_id": "subnet-0140b24822b0b70ae"
          },
          "dependencies": [
            "aws_route_table.privateroute",
            "aws_subnet.subnets",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrt2s1s2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0100ba20fc3adef07",
            "route_table_id": "rtb-0b9548537c90bd966",
            "subnet_id": "subnet-01bab6538200df8eb"
          },
          "dependencies": [
            "aws_internet_gateway.gate1",
            "aws_route_table.pubroute",
            "aws_subnet.subnets",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6c192813e729ca3",
            "route_table_id": "rtb-0b9548537c90bd966",
            "subnet_id": "subnet-0dfcbe828c3bb6133"
          },
          "dependencies": [
            "aws_internet_gateway.gate1",
            "aws_route_table.pubroute",
            "aws_subnet.subnets",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:subnet/subnet-01bab6538200df8eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bab6538200df8eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324037306164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "s1"
            },
            "tags_all": {
              "Name": "s1"
            },
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:subnet/subnet-0dfcbe828c3bb6133",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfcbe828c3bb6133",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324037306164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "s2"
            },
            "tags_all": {
              "Name": "s2"
            },
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:subnet/subnet-074354c9da9fe9625",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074354c9da9fe9625",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324037306164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "s3"
            },
            "tags_all": {
              "Name": "s3"
            },
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:subnet/subnet-09ce4a7575feffa9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ce4a7575feffa9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324037306164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "s4"
            },
            "tags_all": {
              "Name": "s4"
            },
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:subnet/subnet-040204ac9ebc6a40a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040204ac9ebc6a40a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324037306164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "s5"
            },
            "tags_all": {
              "Name": "s5"
            },
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:subnet/subnet-0140b24822b0b70ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0140b24822b0b70ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324037306164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "s6"
            },
            "tags_all": {
              "Name": "s6"
            },
            "vpc_id": "vpc-0b59bc955c4b42a6b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037306164:vpc/vpc-0b59bc955c4b42a6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8faedd5eae7781e",
            "default_route_table_id": "rtb-09ae3eee6be2bddfe",
            "default_security_group_id": "sg-0425bd11e1c1a239c",
            "dhcp_options_id": "dopt-04729c206e5cce47f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b59bc955c4b42a6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ae3eee6be2bddfe",
            "owner_id": "324037306164",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    }
  ]
}